--- a/spec/package.json
+++ b/spec/package.json
@@ -1,13 +1,13 @@
 {
   "name": "spec",
-  "version": "1.0.0",
-  "description": "neotest-jest spec",
+  "version": "0.0.1",
+  "description": "neotest-vitest spec",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "jest": "^28.1.2",
     "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vitest": "^0.22.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
