--- a/spec/package.json
+++ b/spec/package.json
@@ -6,11 +6,11 @@
   "license": "MIT",
   "dependencies": {
     "ts-node": "^10.8.2",
-    "typescript": "^4.7.4",
-    "vitest": "^0.22.1"
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.3"
+    "@types/node": "^18.0.3",
+    "vite": "^3.0.9",
+    "vitest": "^0.22.1"
   }
 }
