fix: No module level rootPath, fix relative paths after setting vim cwd

--- a/spec-monorepo-no-root-dep/package.json
+++ b/spec-monorepo-no-root-dep/package.json
@@ -2,6 +2,9 @@
   "name": "spec-monorepo-no-root-dep",
   "version": "1.0.0",
   "description": "",
+  "workspaces": [
+    "packages/example"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
