--- a/spec-monorepo-no-root-dep/packages/example/package.json
+++ b/spec-monorepo-no-root-dep/packages/example/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "vitest": "*"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
