--- a/spec-monorepo/packages/example/package.json
+++ b/spec-monorepo/packages/example/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "vitest": "^1.3.0"
+  }
 }
